--- a/index.html
+++ b/index.html
@@ -3,27 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Title of the document</title>
+    <link href="1.css" rel="stylesheet">
 </head>
 
 <body>
+<link href="2.css" rel="stylesheet">
 some text
-<script>
-    document.addEventListener('DOMContentLoaded', function() {
-        var link1 = document.createElement('link');
-        link1.setAttribute('href', '1.css');
-        link1.setAttribute('rel', 'stylesheet');
-        document.body.appendChild(link1);
-
-        setTimeout(function() {
-            var link2 = document.createElement('link');
-            link2.setAttribute('href', '2.css');
-            link2.setAttribute('rel', 'stylesheet');
-
-            document.body.insertBefore(link2, link1);
-            // document.body.appendChild(link2);
-        }, 100);
-    });
-</script>
 <link href="3.css" rel="stylesheet">
 </body>
 
