--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 </head>
 
 <body>
-<link href="2.css" rel="stylesheet">
 some text
+<link href="2.css" rel="stylesheet">
+some text2
 <link href="3.css" rel="stylesheet">
 </body>
 
